WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157159
RTL <select> popup menu is in the wrong location
https://bugs.webkit.org/show_bug.cgi?id=157159
Summary
RTL <select> popup menu is in the wrong location
Dean Jackson
Reported
2016-04-28 17:27:24 PDT
RTL <select> popup menu is in the wrong location
Attachments
Patch
(5.56 KB, patch)
2016-04-28 17:31 PDT
,
Dean Jackson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2016-04-28 17:27:48 PDT
<
rdar://problem/25894451
>
Dean Jackson
Comment 2
2016-04-28 17:31:08 PDT
Created
attachment 277667
[details]
Patch
Dean Jackson
Comment 3
2016-04-28 17:42:03 PDT
Committed
r200217
: <
http://trac.webkit.org/changeset/200217
>
Csaba Osztrogonác
Comment 4
2016-04-28 23:17:41 PDT
(In reply to
comment #3
)
> Committed
r200217
: <
http://trac.webkit.org/changeset/200217
>
It broke the Apple Mac Yosemite build, see build.webkit.org for details.
WebKit Commit Bot
Comment 5
2016-04-29 09:28:54 PDT
Re-opened since this is blocked by
bug 157183
Ryan Haddad
Comment 6
2016-04-29 10:13:01 PDT
Link to failing Yosemite build: <
https://build.webkit.org/builders/Apple%20Yosemite%20Debug%20%28Build%29/builds/14561
> /Volumes/Data/slave/yosemite-debug/build/Source/WebKit/mac/WebCoreSupport/PopupMenuMac.mm:158:11: error: 'NSMenu' may not respond to 'setUserInterfaceLayoutDirection:' [-Werror]
Dean Jackson
Comment 7
2016-04-29 17:02:28 PDT
Back in
r200268
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug