RTL <select> popup menu is in the wrong location https://bugs.webkit.org/show_bug.cgi?id=157159 <rdar://problem/25894451>

Reviewed by Simon Fraser.

Source/WebKit/mac:

Make sure both the NSPopupMenuCell and the NSPopupMenu take
the text direction into account, and offset the position
of the menu slightly if we're in RTL mode.

Unfortunately our test infrastructure is unable to exercise
this because it runs without a window, and the popup menu
is not captured in the screenshot.

* WebCoreSupport/PopupMenuMac.mm:
(PopupMenuMac::show):

Source/WebKit2:

Make sure the NSPopupMenu takes the text direction
into account, and offset the position
of the menu slightly if we're in RTL mode.

Unfortunately our test infrastructure is unable to exercise
this because it runs without a window, and the popup menu
is not captured in the screenshot.

* UIProcess/mac/WebPopupMenuProxyMac.mm:
(WebKit::WebPopupMenuProxyMac::showPopupMenu):

Canonical link: https://commits.webkit.org/175263@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200217 268f45cc-cd09-0410-ab3c-d52691b4dbfc